--- a/DockerFile
+++ b/DockerFile
@@ -1,18 +1,17 @@
-# Dockerfile example for FastAPI deployment
-FROM python:3.9
+# Use a base image with Nginx and FastAPI
+FROM tiangolo/uvicorn-gunicorn-fastapi:python3.9
 
-# Set working directory
-WORKDIR /app
+# Install Nginx
+RUN apt-get update && apt-get install -y nginx
 
-# Install dependencies
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+# Copy your Nginx configuration file into the container
+COPY nginx.conf /etc/nginx/nginx.conf
 
-# Copy the FastAPI app files
-COPY . .
+# Copy your FastAPI app
+COPY . /app
 
-# Expose the port the app runs on
-EXPOSE 8000
+# Expose the port for FastAPI
+EXPOSE 80
 
-# Start the FastAPI app using Uvicorn
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+# Run both Nginx and FastAPI in the container
+CMD service nginx start && uvicorn main:app --host 0.0.0.0 --port 80
