--- a/DockerFile
+++ b/DockerFile
@@ -1,17 +1,27 @@
-# Use a base image with Nginx and FastAPI
-FROM tiangolo/uvicorn-gunicorn-fastapi:python3.9
+# Use an official Python runtime as the base image
+FROM python:3.9-slim
 
-# Install Nginx
-RUN apt-get update && apt-get install -y nginx
+# Set the working directory in the container
+WORKDIR /app
 
-# Copy your Nginx configuration file into the container
+# Install system dependencies and nginx
+RUN apt-get update \
+    && apt-get install -y nginx \
+    && apt-get clean
+
+# Install Python dependencies
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
+
+# Copy the application code
+COPY . .
+
+# Expose the application and nginx port
+EXPOSE 80
+EXPOSE 8000
+
+# Copy Nginx config
 COPY nginx.conf /etc/nginx/nginx.conf
 
-# Copy your FastAPI app
-COPY . /app
-
-# Expose the port for FastAPI
-EXPOSE 80
-
-# Run both Nginx and FastAPI in the container
-CMD service nginx start && uvicorn main:app --host 0.0.0.0 --port 80
+# Start both the FastAPI application and Nginx server
+CMD service nginx start && uvicorn app.main:app --host 0.0.0.0 --port 8000
