--- a/DockerFile
+++ b/DockerFile
@@ -6,7 +6,7 @@ WORKDIR /app
 
 # Install system dependencies and nginx
 RUN apt-get update \
-    && apt-get install -y nginx \
+    && apt-get install -y nginx supervisor \
     && apt-get clean
 
 # Install Python dependencies
@@ -16,12 +16,15 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy the application code
 COPY . .
 
-# Expose the application and nginx port
+# Expose the application and nginx ports
 EXPOSE 80
 EXPOSE 8000
 
 # Copy Nginx config
 COPY nginx.conf /etc/nginx/nginx.conf
 
-# Start both the FastAPI application and Nginx server
-CMD service nginx start && uvicorn app.main:app --host 0.0.0.0 --port 8000
+# Copy Supervisor config (you will need to create this)
+COPY supervisord.conf /etc/supervisor/conf.d/supervisord.conf
+
+# Start the services using Supervisor
+CMD ["supervisord", "-c", "/etc/supervisor/conf.d/supervisord.conf"]
