--- a/nginx.conf
+++ b/nginx.conf
@@ -1,10 +1,10 @@
 server {
     listen 80;
-
-    server_name https://fastapi-book-project-6f7g.onrender.com;
+    
+    server_name fastapi-book-project-6f7g.onrender.com;  # Corrected to just hostname
 
     location / {
-        proxy_pass http://127.0.0.1:8000;
+        proxy_pass http://127.0.0.1:8000;  # FastAPI app running on port 8000 inside the container
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
