--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     
-    server_name fastapi-book-project-6f7g.onrender.com;  # Corrected to just hostname
+    server_name fastapi-book-project-1.onrender.com;  # Corrected to just hostname
 
     location / {
         proxy_pass http://127.0.0.1:8000;  # FastAPI app running on port 8000 inside the container
