--- a/supervisord.conf
+++ b/supervisord.conf
@@ -9,7 +9,7 @@ stderr_logfile=/var/log/nginx.err.log
 stdout_logfile=/var/log/nginx.out.log
 
 [program:uvicorn]
-command=uvicorn app.main:app --host 0.0.0.0 --port 8000
+command=uvicorn main:app --host 0.0.0.0 --port 8000
 autostart=true
 autorestart=true
 stderr_logfile=/var/log/uvicorn.err.log
