--- a/supervisord.conf
+++ b/supervisord.conf
@@ -7,6 +7,7 @@ autostart=true
 autorestart=true
 stderr_logfile=/var/log/nginx.err.log
 stdout_logfile=/var/log/nginx.out.log
+user=root
 
 [program:uvicorn]
 command=uvicorn main:app --host 0.0.0.0 --port 8000
@@ -14,3 +15,4 @@ autostart=true
 autorestart=true
 stderr_logfile=/var/log/uvicorn.err.log
 stdout_logfile=/var/log/uvicorn.out.log
+user=root
