--- a/nginx.conf
+++ b/nginx.conf
@@ -1,13 +1,16 @@
 server {
     listen 80;
     
-    server_name _;  # Use _ to match any domain, or use the exact domain if necessary.
+    server_name _;
 
     location / {
-        proxy_pass http://127.0.0.1:8000;  # Forward requests to Uvicorn on port 8000
+        proxy_pass http://127.0.0.1:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
+
+    # Run Nginx in the foreground
+    daemon off;
 }
