--- a/nginx.conf
+++ b/nginx.conf
@@ -5,13 +5,15 @@ events {
 http {
     server {
         listen 80;
-        server_name localhost;
+        server_name fastapi-book-project-2-7697.onrender.com;
 
         location / {
-            proxy_pass http://localhost:8000;
+            rewrite ^/$ /healthcheck break;
+            proxy_pass http://127.0.0.1:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
 }
