updated cd pipeline

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -6,13 +6,21 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Disable Strict Host Key Checking
+        run: |
+          mkdir -p ~/.ssh
+          echo "Host 20.185.80.28
+                StrictHostKeyChecking no
+                UserKnownHostsFile=/dev/null" >> ~/.ssh/config
+          chmod 600 ~/.ssh/config
+          
       - name: Deploy to Server
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
         run: |
           echo "$SSH_PRIVATE_KEY" > private_key
           chmod 600 private_key
-          ssh -i private_key azureuser@20.185.80.28 \
-          "cd /home/azureuser/fastapi-app && \
+          ssh -i private_key azureuser@20.185.80.28 "
+          cd /home/azureuser/fastapi-app && \
           git pull && \
           sudo systemctl restart fastapi"
